--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 <body>
 <div id="overlay" class="overlay">
 <div class="overlay-body">
-<p class="overlay-title">играй в гта6</p>
+<p class="overlay-title">играй в GTA 6</p>
 <p class="overlay-description">игра будет улучшатся.</p>
 <div class="overlay-buttons-wrapper">
 <div id="accept-button" class="overlay-button">играть</div>
