--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 <div id="accept-button" class="overlay-button">играть</div>
 <div id="decline-button" class="overlay-button">не не хочу играть</div>
 </div>
-<a href="https://parad1st.github.io/" target="_blank" class="overlay-link">автор Степанчик Усть Илимск</a>
+<a href="tiktok" target="_blank" class="overlay-link">автор Степанчик Усть Илимск</a>
 </div>
 </div>
 <div class="scare">
