--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 <div id="accept-button" class="overlay-button">играть</div>
 <div id="decline-button" class="overlay-button">не не хочу играть</div>
 </div>
-<a href="tiktok" target="_blank" class="overlay-link">автор Степанчик Усть Илимск</a>
+<a href="https://avatars.mds.yandex.net/i?id=33f8f40fd047b6b4c2aa2c9aa0f92744_l-5163033-images-thumbs&n=13" target="_blank" class="overlay-link">автор Степанчик Усть Илимск</a>
 </div>
 </div>
 <div class="scare">
