--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 <p class="overlay-title">играй в GTA 6</p>
 <p class="overlay-description">игра будет улучшатся.</p>
 <div class="overlay-buttons-wrapper">
-<div id="accept-button" class="overlay-button">играть</div>
+<div id="accept-button" class="overlay-button">игруть</div>
 <div id="decline-button" class="overlay-button">не не хочу играть</div>
 </div>
 <a href="https://avatars.mds.yandex.net/i?id=33f8f40fd047b6b4c2aa2c9aa0f92744_l-5163033-images-thumbs&n=13" target="_blank" class="overlay-link">автор Степанчик Усть Илимск</a>
