--- a/index.html
+++ b/index.html
@@ -160,13 +160,13 @@
 <body>
 <div id="overlay" class="overlay">
 <div class="overlay-body">
-<p class="overlay-title">играй в GTA 6</p>
-<p class="overlay-description">игра будет улучшатся.</p>
+<p class="overlay-title">строго с пк ГТА 6</p>
+<p class="overlay-description">это игра будет улучшатся .</p>
 <div class="overlay-buttons-wrapper">
 <div id="accept-button" class="overlay-button">игруть</div>
-<div id="decline-button" class="overlay-button">не не хочу играть</div>
+<div id="decline-button" class="overlay-button">не не хочу </div>
 </div>
-<a href="https://avatars.mds.yandex.net/i?id=33f8f40fd047b6b4c2aa2c9aa0f92744_l-5163033-images-thumbs&n=13" target="_blank" class="overlay-link">автор Степанчик Усть Илимск</a>
+<a href="https://yandex.ru/images/search?img_url=https%3A%2F%2Finvestbrok.ru%2Fwp-content%2Fuploads%2F2019%2F08%2FGTA-6.jpg&lr=11273&pos=0&rpt=simage&serp_list_type=all&source=serp&text=%D1%84%D0%BE%D1%82%D0%BE%20%D0%B3%D1%82%D0%B0%206" target="_blank" class="overlay-link">Пользовательское соглашение</a>
 </div>
 </div>
 <div class="scare">
