--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 <div id="accept-button" class="overlay-button">игруть</div>
 <div id="decline-button" class="overlay-button">не не хочу </div>
 </div>
-<a href="https://yandex.ru/images/search?img_url=https%3A%2F%2Finvestbrok.ru%2Fwp-content%2Fuploads%2F2019%2F08%2FGTA-6.jpg&lr=11273&pos=0&rpt=simage&serp_list_type=all&source=serp&text=%D1%84%D0%BE%D1%82%D0%BE%20%D0%B3%D1%82%D0%B0%206" target="_blank" class="overlay-link">Пользовательское соглашение</a>
+<a href="https://yandex.ru/images/search?img_url=https%3A%2F%2Finvestbrok.ru%2Fwp-content%2Fuploads%2F2019%2F08%2FGTA-6.jpg&lr=11273&pos=0&rpt=simage&serp_list_type=all&source=serp&text=%D1%84%D0%BE%D1%82%D0%BE%20%D0%B3%D1%82%D0%B0%206" target="_blank" class="overlay-link">автор степан Усть илимск</a>
 </div>
 </div>
 <div class="scare">
